[package]
name = "vulkan_sandbox"
version = "0.1.0"
authors = ["JoelWilloughby <jawilloughby68@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glm = "0.2.3"
vulkano = "0.20.0"
vulkano-shaders = "0.20.0"

[dependencies.sdl2]
version = "0.34.3"
default-features = false
features = ["static-link","use-vcpkg"]

[package.metadata.vcpkg]
dependencies = ["sdl2[vulkan]"]
git = "https://github.com/microsoft/vcpkg"
branch = "master"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }
